<resources>
    <!-- App Labels -->
    <string name="app_name">Call Your Mother</string>
    <string name="luan">UI Design, Splash Screen, Setup Screen, Call List, Settings</string>
    <string name="colin">Statistics Fragment, External Library Integration, Notifications, Demo Video</string>
    <string name="hamid">read in contacts</string>

    <!-- First-time Setup -->
    <string name="welcome">Welcome</string>
    <string name="splash">Splash Screen</string>
    <string name="setup">Setup</string>
    <string name="next">Next</string>

    <!-- Home/Stats Screen -->
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="statistics">Statistics</string>

    <!-- Call Screen -->
    <string name="call">Call</string>
    <string name="call_list">Call List</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="contact_manager">Contact Manager</string>

    <!-- Settings Screen -->
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="reminder_time">Default Notification Time</string>
    <string name="change_whitelist">Whitelist</string>

    <!-- For Hamid's HashMap -->
    <string name="Feb">Feb</string>
    <string name="Jan">Jan</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="May">May</string>
    <string name="Jun">Jun</string>
    <string name="Jul">Jul</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Oct">Oct</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>

    <!-- Spinner Values -->
    <array name="charts">
        <item name="pie">Pie Chart</item>
        <item name="bar">Bar</item>
    </array>

    <!-- Questions -->
    <string name="q1">
        Welcome! \n\n
        We will be asking a few questions to start off. \n\n

        This will allow us to better cater your experience.
    </string>
    <string name="q2">
        Please allow us to access your contacts and call logs.
        We need this to allow the application to work properly. \n\n

        Failure to do so will require you to allow these later in your phone settings.
    </string>
    <string name="q3">
        Almost done! \n\n
        Lastly, please select how often you want us to remind you to call your contacts. \n\n

        You can change this later in the app settings.
    </string>
    <string name="q4">
        All set! \n\n

        We will now show you some contacts that we recommend you call.
        Use the star button to whitelist that contact.
    </string>
    <string name="permission_error">
        ERROR \n\n

        Please allow permissions in the app settings.
        Otherwise, the app will not work properly.
    </string>


    <!-- From ALARRM EXAMPLE CODE -->
    <string name="set_single_alarm">Set Single Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="cancel_repeating_alarm">Cancel Repeating Alarm</string>
    <string name="channel_name">AlarmCreate Notification Channel</string>
    <string name="channel_description">Notification channel for AlarmCreate</string>
    <string name="sending_not_string">Sending notification at:</string>
    <string name="logging_at_string">Logging alarm at:</string>

</resources>
