<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:key="defaults_category"
        app:title="Change Defaults"
        >

        <DropDownPreference
            app:key="CHANGE_WHITELIST"
            app:title="@string/change_whitelist"
            app:summary="Change whitelisted contacts"
            />

        <DropDownPreference
            app:key="DEFAULT_TIME"
            app:title="@string/reminder_time"
            app:summary="Set your default reminder time"
            />
    </PreferenceCategory>


    <PreferenceCategory
        app:key="about_category"
        app:title="About us"
        >

        <Preference
            app:key="about_luan"
            app:title="Luan Tran"
            app:summary="@string/luan"
            />

        <Preference
            app:key="about_colin"
            app:title="Colin Huemmer"
            app:summary="@string/colin"
            />

        <Preference
            app:key="about_hamid"
            app:title="Hamid Aina"
            app:summary="@string/hamid"
            />

        <Preference
            app:key="feedback"
            app:title="Send Feedback"
            app:summary="Send technical issues and feedback"
            />
    </PreferenceCategory>

</PreferenceScreen>
